# enterprise-subsidy

./: .annotation_safe_list.yml  .bowerrc  .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.rst  CLAUDE.md  Dockerfile  Makefile  README.rst  catalog-info.yaml  codecov.yml  docker-compose.yml  manage.py  openedx.yaml  provision-edx-enterprise-subsidy.sh  provision-enterprise-subsidy.sh  pylintrc  pylintrc_tweaks  pyproject.toml  pytest.ini  pytest.local.ini  setup.cfg  tox.ini
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker-publish.yml  pypi-publish.yml  upgrade-python-requirements.yml
.tx/: config
docs/: Makefile  architecture_overview.rst  caching.rst  conf.py  developing-with-ai.md  index.rst  internationalization.rst  make.bat  testing.rst
docs/decisions/: 0002-initial-api-specification.rst  0003-fulfillment-and-corrective-policies.rst  0004-cross-service-data-linking.rst  0004-subsidy-model-consolidation.rst  0005-subsidy-model-consolidation.rst  0006-transaction-api-state-filtering.rst  0007-handling-learner-initiated-unenrollments.rst  0008-idempotency-keys.rst  0009-access-policy-grouping.rst
docs/how_to/: clear_cache.rst
edx_enterprise_subsidy/: __init__.py  urls.py  wsgi.py
edx_enterprise_subsidy/apps/api/: urls.py
edx_enterprise_subsidy/apps/core/: admin.py  views.py
edx_enterprise_subsidy/apps/core/tests/: test_context_processors.py  test_models.py  test_views.py
edx_enterprise_subsidy/apps/subsidy/: api.py  apps.py  models.py
edx_enterprise_subsidy/apps/subsidy/migrations/: 0001_initial.py
edx_enterprise_subsidy/apps/subsidy/tests/: test_api.py
edx_enterprise_subsidy/settings/: base.py  devstack.py  local.py  private.py.example  production.py  test.py  utils.py
enterprise_subsidy/: __init__.py  docker_gunicorn_configuration.py  urls.py  wsgi.py
enterprise_subsidy/apps/api/: exceptions.py  filters.py  paginators.py  schema.py  urls.py  utils.py
enterprise_subsidy/apps/api/v1/: decorators.py  exceptions.py  serializers.py  urls.py  utils.py  views.py
enterprise_subsidy/apps/api/v2/: urls.py
enterprise_subsidy/apps/api_client/: base_oauth.py  enterprise.py  enterprise_catalog.py  lms_user.py
enterprise_subsidy/apps/api_client/tests/: test_enterprise.py  test_enterprise_catalog.py  test_lms_user.py
enterprise_subsidy/apps/content_metadata/: admin.py  api.py  apps.py  constants.py  models.py
enterprise_subsidy/apps/content_metadata/migrations/: 0001_create_replicated_metadata_model.py
enterprise_subsidy/apps/content_metadata/tests/: test_api.py
enterprise_subsidy/apps/core/: admin.py  api.py  apps.py  consume_signal.py  event_bus.py  models.py  utils.py  views.py
enterprise_subsidy/apps/core/migrations/: 0001_initial.py  0002_add_core_user_lms_user_id.py
enterprise_subsidy/apps/core/tests/: test_context_processors.py  test_models.py  test_utils.py  test_views.py
enterprise_subsidy/apps/fulfillment/: admin.py  api.py  apps.py  constants.py  exceptions.py  models.py
enterprise_subsidy/apps/fulfillment/tests/: test_api.py
enterprise_subsidy/apps/subsidy/: admin.py  api.py  apps.py  constants.py  forms.py  migration_utils.py  models.py  rules.py  scratch.py  signals.py
enterprise_subsidy/apps/subsidy/migrations/: 0001_initial.py  (+25 more)
enterprise_subsidy/apps/transaction/: admin.py  api.py  apps.py  exceptions.py  utils.py  views.py
enterprise_subsidy/settings/: base.py  devstack.py  local.py  private.py.example  production.py  test.py  utils.py
enterprise_subsidy/templates/admin/: unenroll.html
requirements/: base.in  base.txt  ci.txt  common_constraints.txt  constraints.txt  dev.in  dev.txt  doc.txt  pip-tools.txt  pip.txt  production.txt  quality.txt  test.in  test.txt  validation.txt
test_utils/: utils.py
(+34 files in other folders)
