[project]
name = "enterprise-subsidy"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.isort]
indent = '    '
line_length = 120
multi_line_output = 3
skip = ["migrations"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "enterprise_subsidy.settings.test"
addopts = "--cov enterprise_subsidy --cov-report term-missing --cov-report xml"
norecursedirs = [".*", "docs", "requirements", "site-packages"]
filterwarnings = [
    "ignore:.*urlresolvers is deprecated in favor of.*:DeprecationWarning:auth_backends.views:5",
    "ignore:.*invalid escape sequence.*:DeprecationWarning:.*(newrelic|uritemplate|psutil).*",
    "ignore:.*the imp module is deprecated in favour of importlib.*:DeprecationWarning:.*distutils.*",
]
